...
                            diceKey: diceKey, showLettersBeforeIndex: 12, atDieIndex: 12,
                            foregroundColor: Color.Depiction.kitBlue, orientation: .portrait
                        )
                        .frame(minWidth: 0, maxWidth: .infinity)
                        Spacer()
                    }
                    Text("Use a Stickeys Kit").font(.title).foregroundStyle(.tint)
                }
                .contentShape(Rectangle())
            }
            .frame(minHeight: 0, maxHeight: .infinity)
            .buttonStyle(.plain)
            Spacer(minLength: 20)
...
                            diceKey: diceKey, atDieIndex: 12, diceBoxColor: Color.Depiction.kitBlue,
                            diePenColor: Color.Depiction.kitBlue
                        )
                        .frame(minWidth: 0, maxWidth: .infinity)
                        Spacer()
                    }
                    Text("Use a DiceKey Kit").font(.title).foregroundStyle(.tint)
                }
                .contentShape(Rectangle())
            }
            .frame(minHeight: 0, maxHeight: .infinity)
            .buttonStyle(.plain)
            Spacer()
...
