...
                    Text(errorString).font(.footnote).foregroundStyle(Color.Interface.errorText)
                }
            }
        }
        .formStyle(.grouped)
        .alert("Edit Raw JSON", isPresented: $model.showRiskAlert) {
            Button("I accept the risk") { model.showRiskAlert = false }
            Button("Cancel", role: .destructive) { dismiss() }
        } message: {
            Text(
                "Entering a recipe in raw JSON format can be dangerous.\n\nIf you enter a recipe provided by someone else, it could be a trick to get you to re-create a secret you use for another application or purpose.\n\nIf you generate the recipe yourself and forget even a single character, you will be unable to re-generate the same secret again. (Saving the recipe won't help you if you lose th
            )
        }
...
